# MemberCard

./: .env  Change Notes  app.py  nouser.xlsx  pyproject.toml  requirements.txt
static/: nouse4.xlsx  sample_cards.csv  sample_cards.xlsx
templates/: index.html
